--- a/Elibrary/Libery/QuanLyThuVien/bin/QuanLyThuVien.dll.config
+++ b/Elibrary/Libery/QuanLyThuVien/bin/QuanLyThuVien.dll.config
@@ -6,6 +6,8 @@
 <configuration>
   <connectionStrings>
     <add name="con" connectionString="Data Source=DESKTOP-T71RRF7\HIEN;Initial Catalog=QLTV;Integrated Security=True" />
+    <add name="QLTVConnectionString" connectionString="Data Source=DESKTOP-T71RRF7\HIEN;Initial Catalog=QLTV;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
